--- a/bigbluebutton-html5/imports/ui/components/presentation/presentation-toolbar/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/presentation/presentation-toolbar/styles.scss
@@ -26,6 +26,16 @@
 
 .presentationBtn {
   position: relative;
+  color: var(--toolbar-button-color);
+  background-color: var(--color-off-white);
+  border-radius: 0;
+  box-shadow: none !important;
+  border: 0;
+
+  &:focus {
+    background-color: var(--color-off-white);
+    border: 0;
+  }
 }
 
 .presentationZoomControls {
@@ -86,30 +96,10 @@
     }
   }
 
-  button,
-  select,
-  >div {
-    color: var(--toolbar-button-color);
-    background-color: var(--color-off-white);
-    border-radius: 0;
-    box-shadow: none !important;
-    border: 0;
-
-    &:focus {
-      background-color: var(--color-off-white);
-      border: 0;
-    }
-  }
-
   i {
     color: var(--toolbar-button-color);
     display: flex;
     justify-content: center;
-    align-items: center;
-  }
-
-  div {
-    display: flex;
     align-items: center;
   }
 }
